src/index.css
@font-face {
  font-family: "Pixels";
  src:
    url("./fonts/BoldsPixels.woff2") format("woff2"),
    url("./fonts/BoldsPixels.woff") format("woff");
  font-weight: 900;
  font-style: normal;
  font-display: swap;
}

:root {
  font-family: Pixels, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  margin: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 24px;
  min-width: 320px;
  min-height: 100vh;
  background-image: url(./images/dirt.webp);
  background-color: #efefef;
  image-rendering: pixelated;
}

#root {
  width: 800px;
  height: 768px;
  margin: 0 auto;
  border: 32px solid transparent;
  border-image-source: url(./images/game-borders.png);
  border-image-slice: 32 fill;
  border-image-width: 32px;
  border-image-repeat: round;
  filter: drop-shadow(18px 18px 0 rgba(17, 17, 17, 0.5));
  box-sizing: border-box;
  position: relative;
}

#root > .player .next-actions {
  display: none;
}

hr.ui-separator {
  height: 24px;
  border: 0 solid transparent;
  border-width: 0 51px;
  border-image-source: url(/images/separator.png);
  border-image-slice: 0 51 0 51 fill;
  border-image-repeat: repeat stretch;
  width: 75%;
  margin-bottom: auto;
}

p {
  margin: 0;
  padding: 0;
}

.slot-machine-panel-fallen {
  animation: fall 0.6s cubic-bezier(0.55, 0, 1, 1) forwards;
}

.floating-choice-item:hover {
  animation-play-state: paused, running;
}

.floating-choice-item {
  animation:
    floating-choice-item-float 3s ease-in-out infinite,
    floating-choice-item-tremble 0.15s linear infinite;
  animation-play-state: running, paused;
}

.game-over-gold-container {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 8px;
  margin-bottom: 24px;
}

.game-over-gold-container .gold-counter {
  position: static;
}

@keyframes floating-choice-item-float {
  0%,
  100% {
    transform: translateY(0px);
  }
  50% {
    transform: translateY(-10px);
  }
}

@keyframes floating-choice-item-tremble {
  0% {
    translate: -1px -0.5px;
  }
  25% {
    translate: 1px 0.5px;
  }
  50% {
    translate: -1px 0.5px;
  }
  75% {
    translate: 1px -0.5px;
  }
  100% {
    translate: -1px -0.5px;
  }
}

@keyframes fall {
  0% {
    transform: translateY(0) rotate(0deg);
    opacity: 1;
  }
  99% {
    transform: translateY(120%) rotate(8deg);
    opacity: 0;
  }
  100% {
    display: none;
  }
}

@media screen and (max-width: 1080px) {
  body {
    gap: 12px;
  }
}

